textgen: fix next to last use of singleton registry
There's single use left, in RegularTextUnit w/o CH, in use from xml sample.